--- a/Website/templates/main.html
+++ b/Website/templates/main.html
@@ -11,27 +11,26 @@
    <!--<link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">-->
    <link href="{{ url_for('static',filename = 'style.css') }}" rel="stylesheet" type="text/css">
    <div class="container">
-    <div class="navbar-header">
-      <a class="navbar-brand" href="/"><img src="https://images-na.ssl-images-amazon.com/images/I/418PuxYS63L.png" class="img-responsive" width="150" height="150"></a>
-    </div>
-  </div>
+      <div class="navbar-header">
+        <a class="navbar-brand" href="/"><img src="https://images-na.ssl-images-amazon.com/images/I/418PuxYS63L.png" class="center" width="150" height="150"></a>
+      </div>
+   </div>
  </head>
  
  <head>
   <style>
      body {
-        background-image: url("../static/background.png");
+        background-image: url("../static/bb.png");
      }
   </style>
 </head>
 
-<head><h1 style="color: black">Reddit Flair Detector</h1> </head>
 
 <div class="formbox">
 <form action="{{ url_for('main') }}" method="POST">
     <fieldset>
       
-        <b>Enter the post URL from Reddit India:</b>
+        <b style="text-align:center;">Enter the post URL from Reddit India:</b>
         <input name="url" type="text" required>
         <br>
         <br>
@@ -60,6 +59,8 @@
     {% endif %}
 </div>
 
-<div style="position:absolute;left:50%;transform:translate(-50%);bottom:0;width:100%;padding: 2px;font-size: 13px;"><h4>Created by  <a href = https://github.com/pranay-ar> Pranay Reddy</a></h4></div>
+<div class="container-fluid bg-grey">
+  <h5 align="center" style='color:white'>Created by <a href = "https://github.com/pranay-ar">Pranay Reddy</a></h5>
+</div>
 
 </html>
