--- a/Website/templates/main.html
+++ b/Website/templates/main.html
@@ -12,7 +12,7 @@
    <link href="{{ url_for('static',filename = 'style.css') }}" rel="stylesheet" type="text/css">
    <div class="container">
       <div class="navbar-header">
-        <a class="navbar-brand" href="/"><img src="https://images-na.ssl-images-amazon.com/images/I/418PuxYS63L.png" class="center" width="150" height="150"></a>
+        <a class="navbar-brand" href="/"><img src="https://images-na.ssl-images-amazon.com/images/I/418PuxYS63L.png" class="center" width="200" height="200"></a>
       </div>
    </div>
  </head>
@@ -20,7 +20,7 @@
  <head>
   <style>
      body {
-        background-image: url("../static/bb.png");
+        background-image: url("../static/bbb.png");
      }
   </style>
 </head>
