--- a/Website/templates/main.html
+++ b/Website/templates/main.html
@@ -16,7 +16,7 @@
       </div>
    </div>
  </head>
- 
+ <head><h1 style="color: black">Reddit Flair Detector</h1></head>
  <head>
   <style>
      body {
@@ -59,8 +59,6 @@
     {% endif %}
 </div>
 
-<div class="container-fluid bg-grey">
-  <h5 align="center" style='color:white'>Created by <a href = "https://github.com/pranay-ar">Pranay Reddy</a></h5>
-</div>
+
 
 </html>
