--- a/templates/test.html
+++ b/templates/test.html
@@ -18,6 +18,11 @@ width: 15%;
 </head>
 <body>
 <br><br>
+<div class="container">
+    <div class="navbar-header">
+      <a class="navbar-brand" href="/"><img src="https://images-na.ssl-images-amazon.com/images/I/418PuxYS63L.png" class="center" width="200" height="200"></a>
+    </div>
+ </div>
 <h1>Automated Testing Site</h1>
 <p>
 <p>Upload the .txt file consisting of the subreddit posts<br>Results will be shared as a JSON object which contains the Reddit URL and its corresponding flair</p>
