--- a/templates/test.html
+++ b/templates/test.html
@@ -20,14 +20,14 @@ width: 15%;
 <br><br>
 <div class="container">
     <div class="navbar-header">
-      <a class="navbar-brand" href="/"><img src="https://images-na.ssl-images-amazon.com/images/I/418PuxYS63L.png" class="center" width="200" height="200"></a>
+      <a class="navbar-brand" href="/"><img src="https://images-na.ssl-images-amazon.com/images/I/418PuxYS63L.png" class="center" width="180" height="180"></a>
     </div>
  </div>
-<h1>Automated Testing Site</h1>
+<h1 {font-size: 150%}>Automated Testing Site</h1>
 <p>
-<p>Upload the .txt file consisting of the subreddit posts<br>Results will be shared as a JSON object which contains the Reddit URL and its corresponding flair</p>
+<p><b>Upload the .txt file consisting of the subreddit posts<br>Results will be shared as a JSON object which contains the Reddit URL and its corresponding flair</b></p>
 <br><br><br>
-<form action = "https://flair-test.herokuapp.com/automated_testing" method = "post" enctype = "multipart/form-data" name = "Shaurya">
+<form action = "https://r-india-flair-classifier.herokuapp.com/automated_testing" method = "post" enctype = "multipart/form-data" name = "Shaurya">
 <br>
 Select File: <input type  = "file" name = "upload_file">
 <br><br>
