--- a/templates/test.html
+++ b/templates/test.html
@@ -23,16 +23,17 @@ width: 15%;
       <a class="navbar-brand" href="/"><img src="https://images-na.ssl-images-amazon.com/images/I/418PuxYS63L.png" class="center" width="180" height="180"></a>
     </div>
  </div>
-<h1 {font-size: 150%}>Automated Testing Site</h1>
-<p>
-<p><b>Upload the .txt file consisting of the subreddit posts<br>Results will be shared as a JSON object which contains the Reddit URL and its corresponding flair</b></p>
-<br><br><br>
-<form action = "https://r-india-flair-classifier.herokuapp.com/automated_testing" method = "post" enctype = "multipart/form-data" name = "Shaurya">
+<h1 style="font-size: xx-large;">Automated Testing Page</h1>
+<p><br><br>
+<h3 style="font-size: xx-large; font:700;"><b>Upload the .txt file consisting of the subreddit posts</h3>
+<br><br>
+<form action = "https://r-india-flair-classifier.herokuapp.com/automated_testing" method = "post" enctype = "multipart/form-data" name = "Pranay">
 <br>
-Select File: <input type  = "file" name = "upload_file">
+<b>Select File:</b> <input type  = "file" name = "upload_file">
 <br><br>
 <input type = "submit" value = "Submit"/>
 <br><br><br><br><br>
+<div style="position: absolute;;left:50%;transform:translate(-50%);bottom:0;width:100%;padding: 2px;font-size: 13px;"><h2>Created by  <a href = https://github.com/pranay-ar> Pranay Reddy</a></h2></div>
 
 </form>
 </body>
