--- a/templates/main.html
+++ b/templates/main.html
@@ -59,6 +59,6 @@
     {% endif %}
 </div>
 
-
+<div style="position: absolute;;left:50%;transform:translate(-50%);bottom:0;width:100%;padding: 2px;font-size: 13px;"><h4>Created by  <a href = https://github.com/pranay-ar> Pranay Reddy</a></h4></div>
 
 </html>
